fixed trasnparency issue on IE 11

--- a/dev/scss/components/_layout.scss
+++ b/dev/scss/components/_layout.scss
@@ -33,6 +33,7 @@ body{
 	background:	-webkit-linear-gradient(top, rgba(72, 85, 99,0.92), rgba(41, 50, 60,0.92));
 	background:	-o-linear-gradient(top, rgba(72, 85, 99,0.92), rgba(41, 50, 60,0.92));
 	background:	-moz-linear-gradient(top, rgba(72, 85, 99,0.92), rgba(41, 50, 60,0.92));
+	background:	-ms-linear-gradient(top, rgba(72, 85, 99,0.92), rgba(41, 50, 60,0.92));
 	background:	linear-gradient(top, rgba(72, 85, 99,0.92), rgba(41, 50, 60,0.92));
 	padding:0 3%;
 }
